# pre-commit-hooks

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: main.yml
src/dtprecommit_hooks/: check_email_domain.py  utils.py
tests/: check_email_domain_test.py
