[build-system]
requires = ["setuptools >= 59.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "dtprecommit_hooks"
version = "1.0.0"
requires-python = ">=3.7"
description = "Dronetag's pre-commit-hooks"
readme = "README.md"
license = {text = "MIT license"}
authors = [{name = "Tomas Peterka", email = "tomas.peterka@dronetag.cz"},]
dependencies = []

[project.scripts]
check-email-domain = "dtprecommit_hooks.check_email_domain:main"

[project.optional-dependencies]
test = [
  "wheel",
  "pre-commit",
  "covdefaults",
  "coverage",
  "pytest",
]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["F", "E", "I"]  # F: pyflakes, E: pycodestyle, I: isort
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.coverage.run]
plugins = "covdefaults"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
